[FEAT]: Tela Cadastro

--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Index.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Index.cshtml
@@ -14,10 +14,10 @@
 	<table class="whitespace-no-wrap table-striped relative w-full table-auto border-collapse bg-white">
 		<thead>
 			<tr class="text-left">
-				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 text-xs font-bold uppercase tracking-wider text-gray-600">Data Agendamento</th>
+				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 text-xs font-bold uppercase tracking-wider text-gray-600">Data Entrada</th>
 				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 text-xs font-bold uppercase tracking-wider text-gray-600">Nome do Dono</th>
 				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 text-xs font-bold uppercase tracking-wider text-gray-600">Nome do Pet</th>
-				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 text-xs font-bold uppercase tracking-wider text-gray-600">Ações</th>
+				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 tracking-wider"></th>
 			</tr>
 		</thead>
 		<tbody class="divide-y divide-gray-200">
