--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
@@ -2,42 +2,54 @@
 @model AgendamentoVeterinaria.Web.Pages.CadastroAgendamento.CadastrarModel
 
 <body class="font-quicksand">
-	<div class="mx-auto max-w-2xl rounded bg-indigo-500 p-14 shadow">
-		<div class="flex flex-col gap-6">
-			<div class="mb-2 flex flex-col">
-				<h2 class="text-3xl font-bold text-white">Cadastrar</h2>
-				<span class="text-indigo-300">Informe os campos para realizar um agendamento.</span>
-			</div>
-			<div class="flex flex-col gap-2">
-				<label class="font-medium text-white">Nome do dono:</label>
-				<input type="text"
-					   class="rounded border border-gray-300 px-4 py-2" />
-			</div>
-			<div class="flex flex-col gap-2">
-				<label class="font-medium text-white">Nome do pet:</label>
-				<input type="text"
-					   class="rounded border border-gray-300 px-4 py-2" />
-			</div>
-			<div class="flex justify-between">
-				<div class="flex flex-col gap-2">
-					<label class="font-medium text-white">Agendendamento para data:</label>
-					<input type="date"
-						   class="w-64 rounded px-4 py-2" />
+    <form method="post"> 
+		<div class="mx-auto max-w-2xl rounded-lg bg-indigo-500 p-14 shadow">
+			<div class="flex flex-col gap-6">
+				<div class="mb-2 flex flex-col">
+					<h2 class="text-3xl font-bold text-white">Cadastrar</h2>
+					<span class="text-indigo-300">Informe os campos para realizar um agendamento.</span>
 				</div>
 				<div class="flex flex-col gap-2">
-					<label class="font-medium text-white">Serviço:</label>
-					<select class="w-64 rounded border border-gray-300 px-4 py-2">
-						<option disabled selected>Selecione um serviço..</option>
-						<option>Veterinária</option>
-						<option>Banho e Tosa</option>
-					</select>
+					<label class="font-medium text-white">Nome do dono:</label>
+					<input type="text"
+						   asp-for="Agendamento.NomeDono" 
+						   class="rounded border border-gray-300 px-4 py-2" />
 				</div>
-			</div>
-			<div class="flex flex-col gap-2">
-				<label class="font-medium text-white">Observações:</label>
-				<textarea class="rounded border border-gray-300 px-4 py-2"></textarea>
-			</div>
+				<div class="flex flex-col gap-2">
+					<label class="font-medium text-white">Nome do pet:</label>
+					<input type="text"
+						   asp-for="Agendamento.NomePet"
+						   class="rounded border border-gray-300 px-4 py-2" />
+				</div>
+				<div class="flex justify-between">
+					<div class="flex flex-col gap-2">
+						<label class="font-medium text-white">Agendendamento para data:</label>
+						<input type="date"
+							   asp-for="Agendamento.DataAgendamento"
+							   class="w-64 rounded px-4 py-2" />
+					</div>
+					<div class="flex flex-col gap-2">
+						<label class="font-medium text-white">Serviço:</label>
+						<select asp-for="Agendamento.Observacoes" class="w-64 rounded border border-gray-300 px-4 py-2">
+							<option disabled selected>Selecione um serviço..</option>
+							<option>Veterinária</option>
+							<option>Banho e Tosa</option>
+						</select>
+					</div>
+				</div>
+				<div class="flex flex-col gap-2">
+					<label class="font-medium text-white">Observações:</label>
+					<textarea asp-for="Agendamento.Observacoes" class="rounded border border-gray-300 px-4 py-2"></textarea>
+				</div>
+				<div class="mt-2 flex justify-end gap-3">
+					<a class="rounded border px-6 py-2 font-medium text-white shadow transition duration-150 hover:border-gray-200 hover:bg-white hover:text-black">Voltar</a>
 
+					<button type="submit" 
+							class="rounded bg-black px-6 py-2 font-medium text-white shadow-lg transition duration-150 hover:bg-white hover:text-black">
+						Cadastrar
+					</button>
+				</div>
+			</div>
 		</div>
-	</div>
+	</form>
 </body>
