--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
@@ -1,18 +1,20 @@
 ﻿@page
 @model AgendamentoVeterinaria.Web.Pages.CadastroAgendamento.CadastrarModel
 
-<body class="font-quicksand">
-    <form method="post"> 
-		<div class="mx-auto max-w-2xl rounded-lg bg-indigo-500 p-14 shadow">
+@section NoScroll { }
+
+<div class="bg-[url(/img/dog-cadastrar.jpg)] min-h-screen bg-cover bg-center bg-no-repeat">
+	<form method="post" class="flex h-full items-center justify-start py-10">
+		<div class="mx-20 w-full max-w-2xl rounded-2xl bg-indigo-600 p-16 shadow">
 			<div class="flex flex-col gap-6">
 				<div class="mb-2 flex flex-col">
 					<h2 class="text-3xl font-bold text-white">Cadastrar</h2>
-					<span class="text-indigo-300">Informe os campos para realizar um agendamento.</span>
+					<span class="text-indigo-300">Preencha os campos para agendar o atendimento.</span>
 				</div>
 				<div class="flex flex-col gap-2">
-					<label class="font-medium text-white">Nome do dono:</label>
+					<label class="font-medium text-white">Digite seu nome:</label>
 					<input type="text"
-						   asp-for="Agendamento.NomeDono" 
+						   asp-for="Agendamento.NomeDono"
 						   class="rounded border border-gray-300 px-4 py-2" />
 				</div>
 				<div class="flex flex-col gap-2">
@@ -21,16 +23,16 @@
 						   asp-for="Agendamento.NomePet"
 						   class="rounded border border-gray-300 px-4 py-2" />
 				</div>
-				<div class="flex justify-between">
+				<div class="flex flex-col gap-6 md:flex-row md:justify-between">
 					<div class="flex flex-col gap-2">
-						<label class="font-medium text-white">Agendendamento para data:</label>
+						<label class="font-medium text-white">Agendamento para data:</label>
 						<input type="date"
 							   asp-for="Agendamento.DataAgendamento"
-							   class="w-64 rounded px-4 py-2" />
+							   class="w-full rounded border border-gray-300 px-4 py-2 md:w-64" />
 					</div>
 					<div class="flex flex-col gap-2">
 						<label class="font-medium text-white">Serviço:</label>
-						<select asp-for="Agendamento.Observacoes" class="w-64 rounded border border-gray-300 px-4 py-2">
+						<select asp-for="Agendamento.Observacoes" class="w-full rounded border border-gray-300 px-4 py-2 md:w-64">
 							<option disabled selected>Selecione um serviço..</option>
 							<option>Veterinária</option>
 							<option>Banho e Tosa</option>
@@ -41,10 +43,9 @@
 					<label class="font-medium text-white">Observações:</label>
 					<textarea asp-for="Agendamento.Observacoes" class="rounded border border-gray-300 px-4 py-2"></textarea>
 				</div>
-				<div class="mt-2 flex justify-end gap-3">
+				<div class="mt-6 flex justify-end gap-3">
 					<a class="rounded border px-6 py-2 font-medium text-white shadow transition duration-150 hover:border-gray-200 hover:bg-white hover:text-black">Voltar</a>
-
-					<button type="submit" 
+					<button type="submit"
 							class="rounded bg-black px-6 py-2 font-medium text-white shadow-lg transition duration-150 hover:bg-white hover:text-black">
 						Cadastrar
 					</button>
@@ -52,4 +53,4 @@
 			</div>
 		</div>
 	</form>
-</body>
+</div>
