--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Index.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Index.cshtml
@@ -4,42 +4,44 @@
 
 @model AgendamentoVeterinaria.Web.Pages.CadastroAgendamento.IndexModel
 
-<div class="flex items-center justify-end">
-	<a asp-page="/CadastroAgendamento/Cadastrar" class="rounded border border-purple-700 bg-purple-500 px-4 py-2 text-base font-bold text-white transition duration-150 hover:bg-purple-800">
-		Cadastrar
-	</a>
-</div>
+<div class="flex min-h-screen flex-col gap-5 bg-gray-100">
+	<div class="mr-16 mt-10 flex items-center justify-end pr-80">
+		<a asp-page="/CadastroAgendamento/Cadastrar" class="rounded border border-purple-700 bg-purple-500 px-4 py-2 text-base font-bold text-white transition duration-150 hover:bg-purple-800">
+			Cadastrar
+		</a>
+	</div>
 
-<div class="relative overflow-x-auto overflow-y-auto rounded-lg bg-white shadow">
-	<table class="whitespace-no-wrap table-striped relative w-full table-auto border-collapse bg-white">
-		<thead>
-			<tr class="text-left">
-				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 text-xs font-bold uppercase tracking-wider text-gray-600">Data Entrada</th>
-				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 text-xs font-bold uppercase tracking-wider text-gray-600">Nome do Dono</th>
-				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 text-xs font-bold uppercase tracking-wider text-gray-600">Nome do Pet</th>
-				<th class="sticky top-0 border-b border-gray-200 bg-gray-100 px-6 py-2 tracking-wider"></th>
-			</tr>
-		</thead>
-		<tbody class="divide-y divide-gray-200">
-			@foreach (var agendamento in Model.AgendamentoConsultas)
-			{
-				<tr class="hover:bg-gray-50">
-					<td class="border-t border-gray-200 px-6 py-4">@agendamento.DataEntrada</td>
-					<td class="border-t border-gray-200 px-6 py-4">@agendamento.NomeDono</td>					
-					<td class="border-t border-gray-200 px-6 py-4">@agendamento.NomePet</td>
-					<td class="flex items-center justify-center gap-2 border-t border-gray-200 px-4 py-4">
-						<button class="rounded bg-blue-500 px-4 py-1 text-white transition duration-150 hover:bg-blue-700">
-							Editar
-						</button>
-						<button class="items-center rounded bg-green-500 px-4 py-1 text-white transition duration-150 hover:bg-green-700">
-							Ver Mais
-						</button>
-						<button class="rounded bg-red-500 px-4 py-1 text-white transition duration-150 hover:bg-red-700">
-							Excluir
-						</button>
-					</td>
+	<div class="relative flex h-full w-full items-center justify-center overflow-auto">
+		<table class="whitespace-no-wrap w-[1200px] justify-center rounded bg-gray-200 p-16">
+			<thead>
+				<tr class="text-left">
+					<th class="sticky top-0 border-b border-gray-200 bg-sky-700 px-6 py-2 text-xs font-bold uppercase tracking-wider text-white">Data Entrada</th>
+					<th class="sticky top-0 border-b border-gray-200 bg-sky-700 px-6 py-2 text-xs font-bold uppercase tracking-wider text-white">Nome do Dono</th>
+					<th class="sticky top-0 border-b border-gray-200 bg-sky-700 px-6 py-2 text-xs font-bold uppercase tracking-wider text-white">Nome do Pet</th>
+					<th class="sticky top-0 border-b border-gray-200 bg-sky-700 px-6 py-2 tracking-wider"></th>
 				</tr>
-			}
-		</tbody>
-	</table>
+			</thead>
+			<tbody class="divide-y divide-gray-200">
+				@foreach (var agendamento in Model.AgendamentoConsultas)
+				{
+					<tr class="">
+						<td class="border border-b-gray-300 px-6 py-1">@agendamento.DataEntrada</td>
+						<td class="border border-b-gray-300 px-6 py-1">@agendamento.NomeDono</td>
+						<td class="border border-b-gray-300 px-6 py-1">@agendamento.NomePet</td>
+						<td class="flex items-center justify-center gap-2 border border-t border-b-gray-300 px-4 py-1">
+							<button class="rounded bg-blue-500 px-4 py-1 text-white transition duration-150 hover:bg-blue-700">
+								Editar
+							</button>
+							<button class="items-center rounded bg-green-500 px-4 py-1 text-white transition duration-150 hover:bg-green-700">
+								Ver Mais
+							</button>
+							<button class="rounded bg-red-500 px-4 py-1 text-white transition duration-150 hover:bg-red-700">
+								Excluir
+							</button>
+						</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
 </div>
