--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/Index.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/Index.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@section NoScroll { }
+<div class="h-screen w-screen overflow-hidden bg-[url(/img/homepagebg.jpg)] bg-cover bg-center bg-no-repeat">
 </div>
