--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/Shared/_Layout.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/Shared/_Layout.cshtml
@@ -4,41 +4,30 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - AgendamentoVeterinaria.Web</title>
-    
+
     <link href="~/css/tailwind.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-100 font-sans leading-normal tracking-normal">
-    <header class="bg-white shadow-md">
-        <nav class="container mx-auto flex items-center justify-between px-6 py-4">
-            <a class="text-xl font-bold text-gray-800 hover:text-gray-600" asp-area="" asp-page="/Index">Agendamento Veterinária</a>
-            
-            <div class="hidden items-center space-x-4 md:flex">
-                <a class="text-gray-600 hover:text-gray-800" asp-area="" asp-page="/CadastroAgendamento/Index">Agendar</a>
-                <a class="text-gray-600 hover:text-gray-800" asp-area="" asp-page="/Privacy">Privacy</a>
+<body class="font-quicksand flex flex-col bg-gray-100 @(IsSectionDefined("NoScroll") ? "overflow-hidden" : "")">
+    <header class="flex-shrink-0 bg-white shadow-md">
+        <nav class="mx-20 flex items-center justify-between px-6 py-2">
+            <a class="h-16 w-16 bg-[url(/img/logoVetImpacta.png)] bg-cover bg-no-repeat" asp-area="" asp-page="/Index"></a>
+
+            <div class="flex items-center gap-4 space-x-4 md:flex">
+                <a class="font-bold text-gray-600 hover:text-gray-800" asp-area="" asp-page="/CadastroAgendamento/Index">Agendamento</a>
+                <a class="font-semibold text-gray-600 hover:text-gray-800" asp-area="" asp-page="/Privacy">Sobre</a>
             </div>
-            
-            <button class="text-gray-500 hover:text-gray-800 focus:text-gray-800 focus:outline-none md:hidden" type="button">
-                <svg class="h-6 w-6 fill-current" viewBox="0 0 24 24">
-                    <path d="M4 6h16M4 12h16M4 18h16"></path>
-                </svg>
-            </button>
+                        
         </nav>
     </header>
 
-    <div class="container mx-auto mt-8 p-4">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+    <main class="w-full">
+        @RenderBody()
+    </main>
 
-    <footer class="mt-8 py-4 text-center text-gray-600">
-        <div class="container mx-auto">
-            &copy; 2025 - AgendamentoVeterinaria Impacta - com todos direitos reservados.
-        </div>
-    </footer>
+    @RenderSection("NoScroll", required: false)
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
