--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
@@ -32,7 +32,7 @@
 					</div>
 					<div class="flex flex-col gap-2">
 						<label class="font-medium text-white">Serviço:</label>
-						<select asp-for="Agendamento.Observacoes" class="w-full rounded border border-gray-300 px-4 py-2 md:w-64">
+						<select asp-for="Agendamento.TipoServico" class="w-full rounded border border-gray-300 px-4 py-2 md:w-64">
 							<option disabled selected>Selecione um serviço..</option>
 							<option>Veterinária</option>
 							<option>Banho e Tosa</option>
