[STYLE]: Tela de listagem com icones

--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
@@ -44,7 +44,7 @@
 					<textarea asp-for="Agendamento.Observacoes" class="rounded border border-gray-300 px-4 py-2"></textarea>
 				</div>
 				<div class="mt-6 flex justify-end gap-3">
-					<a class="rounded border px-6 py-2 font-medium text-white shadow transition duration-150 hover:border-gray-200 hover:bg-white hover:text-black">Voltar</a>
+					<a asp-page="./Index" class="rounded border px-6 py-2 font-medium text-white shadow transition duration-150 hover:border-gray-200 hover:bg-white hover:text-black">Voltar</a>
 					<button type="submit"
 							class="rounded bg-black px-6 py-2 font-medium text-white shadow-lg transition duration-150 hover:bg-white hover:text-black">
 						Cadastrar
