--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/Shared/_Layout.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - AgendamentoVeterinaria.Web</title>
 
     <link href="~/css/tailwind.css" rel="stylesheet" />
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
