--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/CadastroAgendamento/Cadastrar.cshtml
@@ -3,13 +3,13 @@
 
 @section NoScroll { }
 
-<div class="bg-[url(/img/dog-cadastrar.jpg)] min-h-screen bg-cover bg-center bg-no-repeat">
+<div class="min-h-screen bg-[url(/img/cadastrarCachorro.png)] bg-cover bg-center bg-no-repeat">
 	<form method="post" class="flex h-full items-center justify-start py-10">
-		<div class="mx-20 w-full max-w-2xl rounded-2xl bg-indigo-600 p-16 shadow">
+		<div class="mx-20 w-full max-w-2xl select-none rounded-2xl bg-black bg-opacity-90 p-16 shadow">
 			<div class="flex flex-col gap-6">
 				<div class="mb-2 flex flex-col">
 					<h2 class="text-3xl font-bold text-white">Cadastrar</h2>
-					<span class="text-indigo-300">Preencha os campos para agendar o atendimento.</span>
+					<span class="text-sm text-gray-300">Preencha os campos para agendar o atendimento.</span>
 				</div>
 				<div class="flex flex-col gap-2">
 					<label class="font-medium text-white">Digite seu nome:</label>
@@ -43,10 +43,10 @@
 					<label class="font-medium text-white">Observações:</label>
 					<textarea asp-for="Agendamento.Observacoes" class="rounded border border-gray-300 px-4 py-2"></textarea>
 				</div>
-				<div class="mt-6 flex justify-end gap-3">
-					<a asp-page="./Index" class="rounded border px-6 py-2 font-medium text-white shadow transition duration-150 hover:border-gray-200 hover:bg-white hover:text-black">Voltar</a>
+				<div class="mt-6 flex select-none justify-end gap-3">
+					<a asp-page="./Index" class="rounded border px-6 py-2 font-bold text-white shadow transition duration-150 hover:border-gray-200 hover:bg-white hover:text-black">Voltar</a>
 					<button type="submit"
-							class="rounded bg-black px-6 py-2 font-medium text-white shadow-lg transition duration-150 hover:bg-white hover:text-black">
+							class="rounded bg-emerald-400 px-6 py-2 font-bold text-white shadow-lg transition duration-150 hover:bg-emerald-600 hover:text-emerald-50">
 						Cadastrar
 					</button>
 				</div>
