--- a/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/Index.cshtml
+++ b/AgendamentoVeterinaria/AgendamentoVeterinaria.Web/Pages/Index.cshtml
@@ -12,7 +12,7 @@
 				<div class="font-semibold text-gray-500">Esta ferramenta foi desenvolvida para facilitar o dia-a-dia empresa, permitindo que colaboradores agendem de forma simples e organizada as consultas veterinárias e serviços de banho e tosa. Assim, garantimos praticidade no uso e mais cuidado com os pets.
 				</div>
 				<div class="flex justify-center gap-6">
-					<a class="rounded-3xl bg-black px-10 py-1 text-center text-xl font-bold text-white" asp-page="/CadastroAgendamento/Index">Agenda</a>
+					<a class="rounded-3xl bg-blue-600 px-10 py-1 text-center text-xl font-bold text-white" asp-page="/CadastroAgendamento/Index">Agenda</a>
 					<div class="flex items-center gap-2 rounded-3xl bg-emerald-500 px-4 py-1 text-center text-xl font-bold text-white">
 						<i class='bx bx-plus-big font-semibold text-white'></i>
 						<a asp-page="/CadastroAgendamento/Cadastrar">Criar Serviço</a>
